# alarm-clock

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  TODO.tasks  aclocal.m4  alarm-clock.desktop  config.h.in  configure  configure.ac  packagecore.yaml
po/: LINGUAS  POTFILES.in  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  la.po  lv.po  mk.po  nb.po  nds.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  sk.po  sl.po  sr.po  sv.po  (+3 more)
src/: Makefile.am  Makefile.in  alarm_runner.c  alarm_runner.h  alarm_thread.c  alarm_thread.h  common.c  common.h  configuration.c  configuration.h  counters.c  counters.h  date.c  date.h  export.c  main.c  main_list.c  main_list.h  main_window.c  main_window.h  modify_alarm.c  modify_alarm.h  preferences.c  schedule.c  schedule.h  status_icon.c  status_icon.h  templates.c  templates.h  translate.h  version.h
src/interface/: alarm-clock.ui
